@@ -1,3 +1,8 @@
+2009-11-04  Carlos O'Donell  <carlos@codesourcery.com>
+
+	PR target/41302
+	* gcc.target/m68k/pr41302.c: New test.
+
 2009-11-03  Jason Merrill  <jason@redhat.com>
 
 	PR c++/36959
